# OTORI-Vision-Frontend

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  seed-real-positions.ts  tsconfig.json
backend/: .gitignore  ecosystem.config.js  package.json  setup-price-api.sh
components/: Layout.tsx  NAVVisualization.tsx  PriceChart.tsx  TokenExplorerModal.tsx  TradingInterface.tsx  WalletConnector.tsx
components_old/: DataSourceIndicator.tsx  Layout.tsx  TradingInterface.tsx
config_old/: .env.example  jest.config.js  tsconfig.json
docs/: BACKLOG.md  CENTRALIZED_PRICE_SERVICE.md  DEPLOYMENT_JOURNAL.md  DEV_JOURNAL.md  HYBRID_MODE.md  LP_WALLET.md  NETWORK_INTEGRATION.md  ORD_COMMAND_INFOS.md  OTORI_VISION_ENHANCEMENT_PLAN.md  PI_DEPLOY.md  PRD_MVP.md  PRD_MVP_v2o.md  PRICE_MOVEMENT_ALGORITHM.md  RUNES_INFO.md  RUNE_INTEGRATION.md  Runes_specs.md  SETUP_ORDPI_API.md  TESTNET_DEPLOYMENT_SUCCESS.md  currentUserRules.md  customer_journey_2.0.md  (+3 more)
program/: Cargo.toml  Cargo.toml.backup  README.md  arch-config.json  build.rs
program/examples/: utxo_tracking_example.rs
program/src/: arch_program.rs  bitcoin_rpc.rs  bitcoin_rpc_test.rs  client.rs  error.rs  instructions.rs  lib.rs  lib.rs.backup  runes_client.rs  security.rs  state.rs  system.rs  types.rs  utils.rs
program/src/bitcoin/: cache.rs  mock.rs  mod.rs  rpc.rs  rpc_test.rs  utxo.rs  utxo_tracker.rs
program/src/bitcoin/mock/: mod.rs
program/tests/: local.rs  network_integration.rs  test_multisig.rs  utxo_integration.rs  utxo_tracking.rs
program/tests/mock_sdk/: mock_sdk.rs
(+187 files in other folders)
